@@ -6,15 +6,14 @@ setGeneric("getM", function(object) standardGeneric("getM"))
 setGeneric("getA", function(object) standardGeneric("getA"))
 
 
-setGeneric("calculateCopyNumber", function(object, ...) standardGeneric("calculateCopyNumber"))
 setGeneric("calls<-", function(object, value) standardGeneric("calls<-"))
-setGeneric("callsConfidence<-", function(object, value) standardGeneric("callsConfidence<-"))
 setGeneric("calls", function(object) standardGeneric("calls"))
-setGeneric("callsConfidence", function(object) standardGeneric("callsConfidence"))
+setGeneric("confs", function(object) standardGeneric("confs"))
+setGeneric("confs<-", function(object, value) standardGeneric("confs<-"))
 setGeneric("copyNumber<-", function(object, value) standardGeneric("copyNumber<-"))
+setGeneric("cnConfidence", function(object) standardGeneric("cnConfidence"))
 setGeneric("cnConfidence<-", function(object, value) standardGeneric("cnConfidence<-"))
 setGeneric("copyNumber", function(object) standardGeneric("copyNumber"))
-setGeneric("cnConfidence", function(object) standardGeneric("cnConfidence"))
 setGeneric("chromosome", function(object) standardGeneric("chromosome"))
 setGeneric("chromosome<-", function(object, value) standardGeneric("chromosome<-"))
 setGeneric("db", function(object) standardGeneric("db"))
